* The ability to set the date format in the build loop has been removed. This fixes the issue where setting the date format on one project would affect all of them (CC-355), would cause build status messages to not display in the reporting application (CC-797). Build loop now uses ISO 8601 format for storing date stamp information (CC-353) which is a change from the previous default format.

ModificationSet
---------------------
* When there are multiple source controls attempt to merge conflicting properties by choosing the 'largest' value, to address situation where multiple source controls should return the newest version number or date (CC-830).

Schedule
---------------------
* Fixed a bug where time builders could be hidden by a multiple builder earlier in the file (CC-839). Now Builders are evaluated by time, then by multiple and then by day.

ScriptRunner
---------------------
* Change ScriptRunner/AntBuilder to only create antBuilderOutput.log when needed. Reported by Jared Tafralian.

TFS
---------------------
* Add attributes to support connections profiles and non-default encodings (CC-853). Patch by Dmitry Malenok.

UCM
---------------------
* Logging contributor activities in UCM Modificationset throws a NullPointerException on Linux Platform (CC-815). Path by Patrick Jenner.

Dashboard
======================
* Fix bug where tests that took > 1000 seconds would cause an exception that prevented the build detail page from displaying (CC-828).
* Added ability for users to override the maximum artifact file size that can be viewed without downloading by setting the context parameter 'download.threshhold' (CC-821).

CruiseControl Release Notes - 2.7.3

general
======================
* Change cruisecontrol.sh (main, binaryrelease, distcc) script to use more generic shebang (that also works on FreeBSD) (CC-789). Patch by Ivan "Rambius" Ivanov
* Update saxon to 9.0.0.6
* Update bundled cc-config to version 1.8.

build loop
======================

ClearCase